--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^8.3.3",
     "morgan": "~1.9.1",
+    "randomstring": "^1.3.0",
     "simple-encryptor": "^4.0.0",
     "super-simple-encryption": "^1.0.2"
   }
