--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.9.1",
     "randomstring": "^1.3.0",
     "simple-encryptor": "^4.0.0",
+    "socket.io": "^4.7.5",
     "super-simple-encryption": "^1.0.2"
   }
 }
